test/syc/good/mul_assign.c
/*
 * Multiply assign
 */

int a, b;

int mul_assign(void)
{
	a *= b;
}
